--- a/www/css/common/common.css
+++ b/www/css/common/common.css
@@ -76,6 +76,9 @@ b.author {
 .colorTag {
     display: inline-block;
     vertical-align: top;
+    height: 16px;
+    line-height: 16px;
+    margin-top: 2px;
     max-width: 230px;
     overflow: hidden;
     text-overflow: ellipsis;
