--- a/www/theme/color/lime/common.css
+++ b/www/theme/color/lime/common.css
@@ -5,7 +5,7 @@
 .form-textfield:focus,
 .form-textarea:focus,
 .topLink:focus,
-.newItemButton:focus {
+.newItemButton.not_green:focus {
     border-color: #96bc00;
     background-color: rgba(150, 188, 0, 0.2);
 }
@@ -30,7 +30,7 @@
 .tag:active,
 .clickable.active,
 .clickable:active,
-.newItemButton:active,
+.newItemButton.not_green:active,
 .topLink:active {
     background-color: #96bc00;
     border-color: #96bc00;
