--- a/www/css/common/panel.css
+++ b/www/css/common/panel.css
@@ -6,7 +6,7 @@
 
 .panel-title {
     position: relative;
-    border-top: 2px solid #7f7f7f;
+    border-bottom: 2px solid #7f7f7f;
 }
 
 .panel-title-text {
