ability to create tabs

--- a/www/theme/brightness/light/common.css
+++ b/www/theme/brightness/light/common.css
@@ -23,7 +23,8 @@ body {
 }
 
 .contactPanel-info,
-.twoColumns-column2 {
+.twoColumns-column2,
+.page_tabs-tab.normal {
     border-color: #e3e3e3;
 }
 
