--- a/www/theme/brightness/dark/common.css
+++ b/www/theme/brightness/dark/common.css
@@ -23,7 +23,8 @@ body {
 }
 
 .contactPanel-info,
-.twoColumns-column2 {
+.twoColumns-column2,
+.page_tabs-tab.normal {
     border-color: #1c1c1c;
 }
 
