aalign title_and_description without using element overlapping

--- a/www/css/common/image_link.css
+++ b/www/css/common/image_link.css
@@ -13,9 +13,9 @@
 .image_link-content {
     display: block;
     position: absolute;
-    top: -2px;
-    right: -2px;
-    bottom: -2px;
+    top: 0;
+    right: 0;
+    bottom: 0;
     left: 46px;
 }
 .image_link-title {
