--- a/www/css/index/other.css
+++ b/www/css/index/other.css
@@ -49,9 +49,9 @@ h1 {
     color: #fff;
     margin-top: 24px;
 }
-.siteInfo > .description {
+.siteInfo-description {
     margin-top: 12px;
-    font-size: 11px;
+    font-size: 12px;
 }
 
 .logoImage {
