--- a/www/install/css/common.css
+++ b/www/install/css/common.css
@@ -8,6 +8,7 @@
     cursor: inherit;
     background: transparent;
     text-decoration: none;
+    box-shadow: none;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
