--- a/www/install/css/textfield.css
+++ b/www/install/css/textfield.css
@@ -1,14 +1,16 @@
 .textfield {
     width: 100%;
-    height: 32px;
-    padding: 4px 8px;
+    height: 36px;
+    line-height: 32px;
+    padding-right: 8px;
+    padding-left: 8px;
     background: #222;
     cursor: text;
+    border: 2px solid transparent;
 }
 .textfield:focus {
-    border-color: #aaa;
-    outline: 2px solid #f80;
+    border-color: #f80;
 }
 .textfield:-moz-ui-invalid {
-    outline: 2px solid #f44;
+    border-color: #f44;
 }
