--- a/www/theme/color/blue/common.css
+++ b/www/theme/color/blue/common.css
@@ -17,11 +17,13 @@
 }
 
 .a:focus,
+.tag.active,
 .clickable:target {
     background-color: rgba(35, 156, 254, 0.2);
 }
 
 #tbar,
+.tag.active,
 .panel-title,
 .page_tabs-tab.selected {
     border-color: #239cfe;
