--- a/www/theme/color/lime/common.css
+++ b/www/theme/color/lime/common.css
@@ -17,11 +17,13 @@
 }
 
 .a:focus,
+.tag.active,
 .clickable:target {
     background-color: rgba(150, 188, 0, 0.2);
 }
 
 #tbar,
+.tag.active,
 .panel-title,
 .page_tabs-tab.selected {
     border-color: #96bc00;
