--- a/www/theme/color/pink/common.css
+++ b/www/theme/color/pink/common.css
@@ -17,11 +17,13 @@
 }
 
 .a:focus,
+.tag.active,
 .clickable:target {
     background-color: rgba(255, 102, 170, 0.2);
 }
 
 #tbar,
+.tag.active,
 .panel-title,
 .page_tabs-tab.selected {
     border-color: #f6a;
