--- a/www/css/common/form-select.css
+++ b/www/css/common/form-select.css
@@ -9,6 +9,9 @@
 .form-select:focus {
     background-color: rgba(127, 127, 127, 0.2);
 }
+.form-select:active {
+    background-color: rgba(127, 127, 127, 0.4);
+}
 .form-select.invalid {
     border-color: #f44;
     background-color: #fff4f4;
