--- a/www/css/common/form-textfield.css
+++ b/www/css/common/form-textfield.css
@@ -9,6 +9,9 @@
 .form-textfield:focus {
     background-color: rgba(127, 127, 127, 0.2);
 }
+.form-textfield:active {
+    background-color: rgba(127, 127, 127, 0.4);
+}
 .form-textfield.withLabel {
     width: 65%;
 }
