--- a/www/css/common/form.css
+++ b/www/css/common/form.css
@@ -20,6 +20,9 @@
 .form-textarea:focus {
     background-color: rgba(127, 127, 127, 0.2);
 }
+.form-textarea:active {
+    background-color: rgba(127, 127, 127, 0.4);
+}
 
 .form-filefield {
     height: 48px;
