--- a/www/theme/color/blue/common.css
+++ b/www/theme/color/blue/common.css
@@ -9,6 +9,12 @@
     background-color: rgba(35, 156, 254, 0.2);
 }
 
+.form-select:active,
+.form-textfield:active,
+.form-textarea:active {
+    background-color: rgba(35, 156, 254, 0.4);
+}
+
 .a,
 .tab-active,
 .form-property,
