--- a/www/theme/color/cyan/common.css
+++ b/www/theme/color/cyan/common.css
@@ -9,6 +9,12 @@
     background-color: rgba(0, 193, 193, 0.2);
 }
 
+.form-select:active,
+.form-textfield:active,
+.form-textarea:active {
+    background-color: rgba(0, 193, 193, 0.4);
+}
+
 .a,
 .tab-active,
 .form-property,
