--- a/www/theme/color/violet/common.css
+++ b/www/theme/color/violet/common.css
@@ -51,6 +51,7 @@ mark {
     background-color: rgba(179, 255, 102, 0.5);
 }
 
-.tag:focus {
+.tag:focus,
+.tag:active {
     outline: 2px solid #b366ff;
 }
