--- a/www/theme/color/blue/common.css
+++ b/www/theme/color/blue/common.css
@@ -51,6 +51,7 @@ mark {
     background-color: rgba(254, 128, 32, 0.5);
 }
 
-.tag:focus {
+.tag:focus,
+.tag:active {
     outline: 2px solid #239cfe;
 }
