--- a/www/theme/color/orange/common.css
+++ b/www/theme/color/orange/common.css
@@ -51,6 +51,7 @@ mark {
     background-color: rgba(0, 119, 255, 0.5);
 }
 
-.tag:focus {
+.tag:focus,
+.tag:active {
     outline: 2px solid #f80;
 }
