--- a/www/theme/color/pink/common.css
+++ b/www/theme/color/pink/common.css
@@ -51,6 +51,7 @@ mark {
     background-color: rgba(0, 255, 140, 0.5);
 }
 
-.tag:focus {
+.tag:focus,
+.tag:active {
     outline: 2px solid #f6a;
 }
