remove spaces and newlines from theme color css files

--- a/www/theme/color/pink/common.css
+++ b/www/theme/color/pink/common.css
@@ -1,62 +1,1 @@
-.clickable:focus,
-.clickable.focus,
-.form-select:focus,
-.form-textfield:focus,
-.form-textarea:focus,
-.topLink:focus,
-.newItemButton.not_green:focus {
-    border-color: #f6a;
-    background-color: rgba(255, 102, 170, 0.2);
-}
-
-.form-select:active,
-.form-textfield:active,
-.form-textarea:active {
-    background-color: rgba(255, 102, 170, 0.4);
-}
-
-.a,
-.tab-active,
-.form-property,
-.page_tabs-tab.selected {
-    color: #f6a;
-}
-
-.a:focus,
-.tag.active,
-.clickable.target,
-.clickable:target {
-    background-color: rgba(255, 102, 170, 0.2);
-}
-
-#tbar,
-.tag.active,
-.panel-title,
-.page_tabs-tab.selected {
-    border-color: #f6a;
-}
-
-.clickable.active,
-.clickable:active,
-.newItemButton.not_green:active,
-.topLink:active {
-    background-color: #f6a;
-    border-color: #f6a;
-}
-
-.panel-title-text {
-    color: #f6a;
-}
-
-mark {
-    background-color: rgba(0, 255, 140, 0.5);
-}
-
-.tag:focus,
-.tag:active {
-    outline: 2px solid #f6a;
-}
-
-.progressBar {
-    background-color: #f6a;
-}
+.clickable:focus,.clickable.focus,.form-select:focus,.form-textfield:focus,.form-textarea:focus,.topLink:focus,.newItemButton.not_green:focus {border-color: #f6a;background-color: rgba(255, 102, 170, 0.2);}.form-select:active,.form-textfield:active,.form-textarea:active {background-color: rgba(255, 102, 170, 0.4);}.a,.tab-active,.form-property,.page_tabs-tab.selected {color: #f6a;}.a:focus,.tag.active,.clickable.target,.clickable:target {background-color: rgba(255, 102, 170, 0.2);}#tbar,.tag.active,.panel-title,.page_tabs-tab.selected {border-color: #f6a;}.clickable.active,.clickable:active,.newItemButton.not_green:active,.topLink:active {background-color: #f6a;border-color: #f6a;}.panel-title-text {color: #f6a;}mark {background-color: rgba(0, 255, 140, 0.5);}.tag:focus,.tag:active {outline: 2px solid #f6a;}.progressBar {background-color: #f6a;}
