--- a/www/theme/color/blue/common.css
+++ b/www/theme/color/blue/common.css
@@ -1,62 +1,1 @@
-.clickable:focus,
-.clickable.focus,
-.form-select:focus,
-.form-textfield:focus,
-.form-textarea:focus,
-.topLink:focus,
-.newItemButton.not_green:focus {
-    border-color: #239cfe;
-    background-color: rgba(35, 156, 254, 0.2);
-}
-
-.form-select:active,
-.form-textfield:active,
-.form-textarea:active {
-    background-color: rgba(35, 156, 254, 0.4);
-}
-
-.a,
-.tab-active,
-.form-property,
-.page_tabs-tab.selected {
-    color: #239cfe;
-}
-
-.a:focus,
-.tag.active,
-.clickable.target,
-.clickable:target {
-    background-color: rgba(35, 156, 254, 0.2);
-}
-
-#tbar,
-.tag.active,
-.panel-title,
-.page_tabs-tab.selected {
-    border-color: #239cfe;
-}
-
-.clickable.active,
-.clickable:active,
-.newItemButton.not_green:active,
-.topLink:active {
-    background-color: #239cfe;
-    border-color: #239cfe;
-}
-
-.panel-title-text {
-    color: #239cfe;
-}
-
-mark {
-    background-color: rgba(254, 128, 32, 0.5);
-}
-
-.tag:focus,
-.tag:active {
-    outline: 2px solid #239cfe;
-}
-
-.progressBar {
-    background-color: #239cfe;
-}
+.clickable:focus,.clickable.focus,.form-select:focus,.form-textfield:focus,.form-textarea:focus,.topLink:focus,.newItemButton.not_green:focus {border-color: #239cfe;background-color: rgba(35, 156, 254, 0.2);}.form-select:active,.form-textfield:active,.form-textarea:active {background-color: rgba(35, 156, 254, 0.4);}.a,.tab-active,.form-property,.page_tabs-tab.selected {color: #239cfe;}.a:focus,.tag.active,.clickable.target,.clickable:target {background-color: rgba(35, 156, 254, 0.2);}#tbar,.tag.active,.panel-title,.page_tabs-tab.selected {border-color: #239cfe;}.clickable.active,.clickable:active,.newItemButton.not_green:active,.topLink:active {background-color: #239cfe;border-color: #239cfe;}.panel-title-text {color: #239cfe;}mark {background-color: rgba(254, 128, 32, 0.5);}.tag:focus,.tag:active {outline: 2px solid #239cfe;}.progressBar {background-color: #239cfe;}
