--- a/www/css/common/form-button.css
+++ b/www/css/common/form-button.css
@@ -3,6 +3,8 @@
 }
 
 .form-button-button {
+    display: inline-block;
+    vertical-align: top;
     text-align: center;
     cursor: pointer;
     font-weight: bold;
