user border-radius 50% wherever a circle is required

--- a/www/calendar/index.css
+++ b/www/calendar/index.css
@@ -37,7 +37,7 @@
     width: 32px;
     border: 2px solid #aaa;
     line-height: 28px;
-    border-radius: 16px;
+    border-radius: 50%;
 }
 .calendar-day-busyRing.offmonth {
     border-color: rgba(127, 127, 127, 0.3);
