--- a/www/schedules/calendar.css
+++ b/www/schedules/calendar.css
@@ -36,6 +36,7 @@
     width: 32px;
     border: 2px solid #aaa;
     line-height: 28px;
+    border-radius: 50%;
 }
 .calendar-day-busyRing.offmonth {
     border-color: rgba(127, 127, 127, 0.3);
