make calendar icon day bold on home page

--- a/www/css/calendarIcon/compressed.css
+++ b/www/css/calendarIcon/compressed.css
@@ -1,1 +1,1 @@
-.calendarIcon-day{position:absolute;top:0;left:0;width:32px;height:32px;line-height:30px;text-align:center;transform:rotate(-21deg);-webkit-transform:rotate(-21deg);color:#d00;font-size:12px;font-family:FreeMono,monospace}
+.calendarIcon-day{position:absolute;top:0;left:0;width:32px;height:32px;line-height:30px;text-align:center;transform:rotate(-21deg);-webkit-transform:rotate(-21deg);color:#d00;font-size:12px;font-family:FreeMono,monospace;font-weight:bold}
