--- a/www/css/common/image_link.css
+++ b/www/css/common/image_link.css
@@ -2,6 +2,15 @@
     position: relative;
     height: 48px;
 }
+.image_link.withArrow {
+    background-image: url(../../images/arrow.svg?23);
+    background-repeat: no-repeat;
+    background-position: 100% 50%;
+}
+.image_link.withArrow:active {
+    background-image: url(../../images/arrow-active.svg?1);
+}
+
 .image_link-icon {
     display: block;
     position: absolute;
@@ -10,6 +19,7 @@
     left: 0;
     width: 44px;
 }
+
 .image_link-content {
     display: block;
     position: absolute;
@@ -22,14 +32,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.image_link.withArrow {
-    background-image: url(../../images/arrow.svg?23);
-    background-repeat: no-repeat;
-    background-position: 100% 50%;
-}
-.image_link.withArrow:active {
-    background-image: url(../../images/arrow-active.svg?1);
-}
 .image_link.withArrow .image_link-content {
     right: 24px;
 }
@@ -41,4 +43,14 @@
     bottom: 0;
     left: 0;
     margin: auto;
+}
+
+.image_link-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-position: center;
+    background-size: 100% 100%;
 }
