space between image and text on contact items

--- a/www/css/common/image_link.css
+++ b/www/css/common/image_link.css
@@ -32,6 +32,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.image_link-content.withImage {
+    left: 52px;
+}
 .image_link.withArrow .image_link-content {
     right: 24px;
 }
