use rounded bullets, rectangular bullets are almost impossible to note

--- a/www/css/common/form.css
+++ b/www/css/common/form.css
@@ -58,8 +58,7 @@
     height: 4px;
     margin-right: 6px;
     background-color: #7f7f7f;
-    transform: rotate(-21deg);
-    -webkit-transform: rotate(-21deg);
+    border-radius: 50%;
 }
 
 .form-textfield,
