--- a/www/css/common/textList.css
+++ b/www/css/common/textList.css
@@ -14,6 +14,5 @@
     width: 5px;
     height: 5px;
     margin-right: 8px;
-    transform: rotate(-21deg);
-    -webkit-transform: rotate(-21deg);
+    border-radius: 50%;
 }
